<resources>
    <string name="app_name">SecretCodeDemo</string>
    <string name="secret_code">Secret Code</string>
    <string name="mobile_tricks">Mobile Tricks</string>
    <string name="android_tips">Android Tips</string>
    <string name="skip">Skip</string>
    <string name="mobile_tricks_title">Mobile\ntricks</string>
    <string name="android_tips_title">Android\nTips</string>
    <string name="imei_checker">IMEI Checker</string>
    <string name="privacy_policy_title">Privacy Policy</string>
    <string name="order_details">Order Details</string>
    <string name="txt_network">Network</string>
    <string name="txt_country_title">Country</string>
    <string name="txt_select_network">Select network</string>
    <string name="txt_select_country">Select country</string>
    <string name="txt_price">Price</string>
    <string name="txt_delivery">Delivery</string>
    <string name="txt_manufacturer">Manufacturer</string>
    <string name="imei_service">IMEI Service</string>
    <string name="service_for">Service For</string>
    <string name="txt_prd_title">PRD</string>
    <string name="txt_mep_title">MEP</string>
    <string name="txt_email_title">Email</string>
    <string name="txt_status_title">Status</string>
    <string name="failure_reason">Failure Reason</string>
    <string name="txt_create_date_title">Order Date</string>
    <string name="txt_unlock_code">Unlock Code</string>
    <string name="instructions">Instructions</string>
    <string name="not_able_to_unlock_buy_esim">Not able to Unlock? Buy eSIM</string>
    <string name="want_exit">Do you want to exit?</string>
    <string name="exit">EXIT</string>
    <string name="are_you_satisfied_with_our">Are you satisfied with our Mobile Unlocking App?</string>
    <string name="please_advise_use_on">Please advise us on how we can improve our service</string>
    <string name="oh_no">Oh, no!</string>
    <string name="please_give_us_some_feedback">Please give us some feedback</string>
    <string name="the_best_we_can_get">The best we can get :)</string>
    <string name="rate_us">Rate us</string>
    <string name="we_like_you_too">We like you too!</string>
    <string name="thanks_for_feedback">Thanks for your feedback</string>
    <string name="feedback">Feedback</string>
    <string name="no_email_client">No Email Client</string>
    <string name="give_rate">Please give rating</string>
    <string name="rating">Rating</string>
    <string name="txt_please_wait">Please wait…</string>
    <string name="txt_imei">IMEI</string>
    <string name="txt_email">Email</string>
    <string name="select_device_type">Select Device Type</string>
    <string name="select_imei_service">Select IMEI Service</string>
    <string name="this_service_will_only_check_current_status_of_your_imei_it_will_not_unlock_your_device">This service will only check current status of your IMEI. It will NOT unlock your device.</string>
    <string name="txt_service_have_rates">Service Have 40 – 50 % Success Rates</string>
    <string name="agree_service_terms_condition">By checking this box, you agree to our <a href="https://easysimunlocker.com/privacy-policy">Privacy Policy</a> and <a href="https://easysimunlocker.com/term-and-conditions">Terms &amp; Conditions of service</a></string>
    <string name="txt_dial_to_get_digit">Dial *#06# to get 15 Digit IMEI</string>
    <string name="alert">Alert</string>
    <string name="errors_connection_1">No internet connection!</string>
    <string name="retry">Retry</string>
    <string name="transaction_cancelled">Transaction Cancelled</string>
    <string name="something_was_wrong">Something went wrong</string>
    <string name="no_order_created">No order created</string>
    <string name="please_choose_imei_service">Please choose IMEI Service</string>
    <string name="imei_is_invalid">IMEI is invalid</string>
    <string name="email_is_required">Email is required</string>
    <string name="email_is_invalid">Email is invalid</string>
    <string name="txt_email_invaild">Invalid e-mail address</string>
    <string name="txt_imei_invaild">Invalid IMEI - 15 digits</string>
    <string name="agree_terms_required">Please accept terms and conditions</string>
    <string name="oops_something_went_wrong">Oops something went wrong, please try again later.</string>
    <string name="premium_service">Premium Service</string>
    <string name="dialog_purchase_text">Buy IMEI Premium Service and Claim Your Premium IMEI Service Now.</string>
    <string name="buy_now">Buy Now</string>
    <string name="cancel">Cancel</string>
    <string name="continue_">Continue</string>
    <string name="device_find">Device Find:</string>
    <string name="phone_status">Find out the current status of \nyour phone</string>
    <string name="update">Update</string>
    <string name="imei_is_required">IMEI is required</string>
    <string name="order_status">Order Status</string>
    <string name="txt_success">Success</string>
    <string name="status">Status</string>
    <string name="by_mobile_miracle">By <u>Easysimunlocker.com</u></string>
    <string name="email_imei_input_hint">Input Email Address or IMEI</string>
    <string name="txt_track_now">Track Now</string>
    <string name="no_order_found">No Order Found</string>
    <string name="order_date_time">Order Date, Time : </string>
    <string name="imei_number_title">IMEI Number : </string>
    <string name="order_status_title">Order Status : </string>
    <string name="order_details_title">Order Details</string>
    <string name="email_imei_is_required">Email or IMEI is required</string>
    <string name="tab_text_1">Dashboard</string>
    <string name="tab_text_2">Device</string>
    <string name="tab_text_3">System</string>
    <string name="tab_text_4">Storage</string>
    <string name="tab_text_5">CPU</string>
    <string name="tab_text_6">Battery</string>
    <string name="tab_text_7">Apps</string>
    <string name="tab_text_8" translatable="false">Screen</string>
    <string name="coreNumber">Core %s</string>
    <string name="mhzString">%s Mhz</string>
    <string name="ram_text">%s / %s</string>
    <string name="percentage_format">%.3s%%</string>
    <string name="battery_cold">Cold</string>
    <string name="battery_good">Good</string>
    <string name="battery_dead">Dead</string>
    <string name="battery_overheat">Overheat</string>
    <string name="battery_overvoltage">Over voltage</string>
    <string name="battery_unknown">Unknown</string>
    <string name="battery_unspecified_failure">Unspecified failure</string>
    <string name="ram_refresh_pref">ram_refresh_rate</string>
    <string name="cpu_frequency_pref">cpu_refresh_rate</string>
    <string name="monitoring_period">monitoring_period_frequency</string>
    <string name="enable_monitoring_pref">enable_monitoring_preference</string>
    <string name="sync_header">Sync</string>
    <string name="system_monitoring_header">System</string>
    <string name="android_version">Android: %s</string>
    <string name="is_root">Root: %s</string>
    <string name="sdk_version">SDK Version: %s</string>
    <string name="thanks_your_imei_status_order_has_been_submitted">Thanks! Your order has been submitted and is in process. You will receive an email with the specified IMEI details within specified time.</string>
    <string name="you_will_receive_imei_status_order_confirmation">You will receive order confirmation status updates and IMEI Status details from our email address: support@easysimunlocker.com. Please make sure that this email is in your email safe list. Check your spam, junk, social and other email filters to make sure that your don’t miss important updates from us.</string>
    <string name="thanks_your_order_has_been_submitted">Thanks your order has been submitted and in process. you will receive unlock code and instruction within specified time and email address.</string>
    <string name="you_will_receive_order_confirmation">You will receive order confirmation status updates and unlock code from out email address: support@easysimunlocker.com please make sure that this email is in your email safe list. Check your spam, junk, social and other email filters to make sure that your don’t miss important updates from us.</string>
    <string name="client_token" translatable="false">f54a47732c78d0981d239bf766d02922</string>
    <string name="fb_id" translatable="false">fb817176033068346</string>
    <string name="mobile_brands">Mobile Brands</string>
    <string name="unknown_facts">Unknown Facts</string>
    <string name="recover_file">Recover File</string>
    <string name="improve_battery">Improve Battery</string>
    <string name="unlock_pattern">Unlock Pattern</string>
    <string name="break_pattern">Break Pattern</string>
    <string name="wifi_hotspot">Wi-Fi Hotspot</string>
    <string name="screen_magnifier">Screen Magnifier</string>
    <string name="show_wifi_password">Show Wifi Password</string>
    <string name="block_bluetooth">Block Bluetooth</string>
    <string name="take_screenshots">Take Screenshots</string>
    <string name="delete_notification">Delete Notification</string>
    <string name="hard_factory_reset">Hard Factory Reset</string>
    <string name="control_your_laptop">Control Your Laptop</string>
    <string name="control_your_android">Control Your Android</string>
    <string name="radiation_level">Radiation Level</string>
    <string name="how_to_backup_your">How to backup your android phone</string>
    <string name="add_internet_speed">Add internet speed indicator</string>
    <string name="add_owner_information">Add owner information</string>
    <string name="first_few_things_to_do">First few things to do</string>
    <string name="gesture_setting">Gesture setting to improve performance</string>
    <string name="google_now_commands">Google now commands</string>
    <string name="manage_memory">Manage memory</string>
    <string name="optimizing_device">Optimizing device performance</string>
    <string name="other_general_tips">Other general app tips</string>
    <string name="privacy_and_security">Privacy and security</string>
    <string name="reduce_data_usage">Reduce your data usage on android</string>
    <string name="speedup_android">Speedup android</string>
    <string name="use_to_otg">Use to OTG</string>
    <string name="using_google_now">Using google now</string>
    <string name="get_longer_battery">Get longer battery on your smart phone</string>
    <string name="save_battery">Save battery by turning off power draining app</string>
    <string name="add_hand_to_type">Add hand to type words to your dictionary</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="display_may_turn_black_white">Display may turn black,white,red,green and blue.Look for different colored pixels and tap to continue.</string>
    <string name="not_charging">Not Charging</string>
    <string name="level">Level:</string>
    <string name="temperature">Temperature:</string>
    <string name="voltage">Voltage:</string>
    <string name="current">Current:</string>
    <string name="power">Power:</string>
    <string name="volume_down">Volume Down</string>
    <string name="volume_up">Volume Up</string>
    <string name="display">Display</string>
    <string name="flashlight">Flashlight</string>
    <string name="loud_speaker">Loud Speaker</string>
    <string name="ear_speaker">Ear Speaker</string>
    <string name="microphone">Microphone</string>
    <string name="ear_proximity">Ear Proximity</string>
    <string name="light_sensor">Light Sensor</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="charging">Charging</string>
    <string name="vibration">Vibration</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="connect_your_charger">Connect your charger</string>
    <string name="next">Next</string>
    <string name="is_it_charging">Is it charging?</string>
</resources>