<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/displayFragment">

    <fragment
        android:id="@+id/displayFragment"
        android:name="com.example.githhubdemo.decicetesting.fragment.DisplayFragment"
        android:label="@string/display">


        <action
            android:id="@+id/action_displayFragment_to_flashLightFragment"
            app:destination="@id/flashlightFragment" />
    </fragment>

    <fragment
        android:id="@+id/flashlightFragment"
        android:name="com.example.githhubdemo.decicetesting.fragment.FlashlightFragment"
        android:label="@string/flashlight">

        <action
            android:id="@+id/action_flashlightFragment_to_loudSpeakerFragment"
            app:destination="@id/loudSpeakerFragment" />

    </fragment>

    <fragment
        android:id="@+id/loudSpeakerFragment"
        android:name="com.example.githhubdemo.decicetesting.fragment.LoudSpeakerFragment"
        android:label="@string/loud_speaker">

        <action
            android:id="@+id/action_loudSpeakerFragment_to_earSpeakerFragment"
            app:destination="@id/earSpeakerFragment" />

    </fragment>

    <fragment
        android:id="@+id/earSpeakerFragment"
        android:name="com.example.githhubdemo.decicetesting.fragment.EarSpeakerFragment"
        android:label="@string/ear_speaker">

         <action
             android:id="@+id/action_earSpeakerFragment_to_microphoneFragment"
             app:destination="@id/microphoneFragment" />

    </fragment>

    <fragment
        android:id="@+id/microphoneFragment"
        android:name="com.example.githhubdemo.decicetesting.fragment.MicrophoneFragment"
        android:label="@string/microphone">

         <action
             android:id="@+id/action_microphoneFragment_to_earProximityFragment"
             app:destination="@id/earProximityFragment" />

    </fragment>

    <fragment
        android:id="@+id/earProximityFragment"
        android:name="com.example.githhubdemo.decicetesting.fragment.EarProximityFragment"
        android:label="@string/ear_proximity">

         <action
             android:id="@+id/action_earProximityFragment_to_lightSensorFragment"
             app:destination="@id/lightSensorFragment" />

    </fragment>

    <fragment
        android:id="@+id/lightSensorFragment"
        android:name="com.example.githhubdemo.decicetesting.fragment.LightSensorFragment"
        android:label="@string/light_sensor">

         <action
             android:id="@+id/action_lightSensorFragment_to_accelerometerFragment"
             app:destination="@id/accelerometerFragment" />

    </fragment>

    <fragment
        android:id="@+id/accelerometerFragment"
        android:name="com.example.githhubdemo.decicetesting.fragment.AccelerometerFragment"
        android:label="@string/accelerometer">

         <action
             android:id="@+id/action_accelerometerFragment_to_chargingFragment"
             app:destination="@id/chargingFragment" />

    </fragment>

    <fragment
        android:id="@+id/chargingFragment"
        android:name="com.example.githhubdemo.decicetesting.fragment.ChargingFragment"
        android:label="@string/charging">

         <action
             android:id="@+id/action_chargingFragment_to_vibrationFragment"
             app:destination="@id/vibrationFragment" />

    </fragment>

    <fragment
        android:id="@+id/vibrationFragment"
        android:name="com.example.githhubdemo.decicetesting.fragment.VibrationFragment"
        android:label="@string/vibration">

         <action
             android:id="@+id/action_vibrationFragment_to_bluetoothFragment"
             app:destination="@id/bluetoothFragment" />

    </fragment>

    <fragment
        android:id="@+id/bluetoothFragment"
        android:name="com.example.githhubdemo.decicetesting.fragment.BluetoothFragment"
        android:label="@string/bluetooth">

         <action
             android:id="@+id/action_bluetoothFragment_to_volumeUpFragment"
             app:destination="@id/volumeUpFragment" />

    </fragment>

    <fragment
        android:id="@+id/volumeUpFragment"
        android:name="com.example.githhubdemo.decicetesting.fragment.VolumeUpFragment"
        android:label="@string/volume_up">

         <action
             android:id="@+id/action_volumeUpFragment_to_volumeDownFragment"
             app:destination="@id/volumeDownFragment" />

    </fragment>

    <fragment
        android:id="@+id/volumeDownFragment"
        android:name="com.example.githhubdemo.decicetesting.fragment.VolumeDownFragment"
        android:label="@string/volume_down">

         <action
             android:id="@+id/action_volumeDownFragment_to_deviceTestingResultFragment"
             app:destination="@id/flashlightFragment" />

    </fragment>

    <fragment
        android:id="@+id/deviceTestingResultFragment"
        android:name="com.example.githhubdemo.decicetesting.fragment.DeviceTestingResultFragment"
        android:label="Device Result">



    </fragment>

</navigation>