<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/tvDetails"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:textSize="@dimen/_14sdp"
        android:textColor="@color/textColor"
        android:text="@string/display_may_turn_black_white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <ImageView
        app:layout_constraintBottom_toTopOf="@+id/llButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDetails"
        android:src="@drawable/ic_display"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_150sdp"/>

    <LinearLayout
        android:id="@+id/llButtons"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_30sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/btnYes"
            android:visibility="gone"
            android:orientation="horizontal"
            android:background="@drawable/bg_button_strok"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp">

            <ImageView
                android:src="@drawable/ic_yes"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_gravity="center"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"/>

            <TextView
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/textColor"
                android:text="@string/yes"
                android:textAllCaps="true"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnNext"
            android:visibility="visible"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/bg_button_strok"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp">

            <TextView
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/textColor"
                android:text="@string/next"
                android:textAllCaps="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnNo"
            android:visibility="gone"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/edit_contact_blue"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp">

            <ImageView
                android:src="@drawable/ic_no"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_gravity="center"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"/>

            <TextView
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/textColor"
                android:text="@string/no"
                android:textAllCaps="true"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>