<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tvConnectCharger"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_20sdp"
        android:textSize="@dimen/_16sdp"
        android:textColor="#FF3E4C"
        android:text="@string/connect_your_charger"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvCharging"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvConnectCharger"
        android:gravity="center"
        android:textSize="@dimen/_14sdp"
        android:textColor="@color/textColor"
        android:text="@string/not_charging"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintBottom_toTopOf="@+id/tvLightSensor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCharging"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/ic_charging_details"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_150sdp"/>

        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@+id/tvLightSensor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCharging"
            android:layout_width="match_parent"
            android:layout_height="match_parent">



            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:gravity="end"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:textSize="@dimen/_12sdp"
                        android:textColor="@color/colorToolbar"
                        android:text="@string/level"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvChargingLevel"
                        android:textSize="@dimen/_12sdp"
                        android:textColor="@color/textColor"
                        android:text="Level"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:gravity="end"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:textSize="@dimen/_12sdp"
                        android:textColor="@color/colorToolbar"
                        android:text="@string/temperature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvTemperature"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="Temperature"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/_12sdp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:gravity="end"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:textSize="@dimen/_12sdp"
                        android:textColor="@color/colorToolbar"
                        android:text="@string/voltage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvVoltage"
                        android:textSize="@dimen/_12sdp"
                        android:textColor="@color/textColor"
                        android:text="Voltage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:gravity="end"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/current"
                        android:textColor="@color/colorToolbar"
                        android:textSize="@dimen/_12sdp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvCurrent"
                        android:textSize="@dimen/_12sdp"
                        android:textColor="@color/textColor"
                        android:text="Current"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:gravity="end"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:textSize="@dimen/_12sdp"
                        android:textColor="@color/colorToolbar"
                        android:text="@string/power"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvPower"
                        android:textSize="@dimen/_12sdp"
                        android:textColor="@color/textColor"
                        android:text="Power"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </LinearLayout>



        </LinearLayout>

    </LinearLayout>


    <TextView
        android:id="@+id/tvLightSensor"
        android:textColor="@color/textColor"
        android:textSize="@dimen/_13sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:gravity="center"
        android:text="@string/is_it_charging"
        android:layout_marginBottom="@dimen/_50sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/llButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <LinearLayout
        android:id="@+id/llButtons"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_30sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/btnYes"
            android:orientation="horizontal"
            android:background="@drawable/bg_button_strok"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp">

            <ImageView
                android:src="@drawable/ic_yes"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_gravity="center"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"/>

            <TextView
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/textColor"
                android:text="@string/yes"
                android:textAllCaps="true"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnNo"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/edit_contact_blue"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp">

            <ImageView
                android:src="@drawable/ic_no"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_gravity="center"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"/>

            <TextView
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/textColor"
                android:text="@string/no"
                android:textAllCaps="true"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>